Content Exclusion: The sections for Professional Snapshot, Contextual Skill Match, and The Roadmap to Mastery are now set to display: none !important; in the print styles, removing them completely.
Layout Preservation: All remaining sections (Core Technical Expertise, Professional Journey, and Education & Global Competencies) will now print with their original card layouts, styling, and spacing, ensuring a beautiful, multi-page visual resume printout without page limits.

--- a/index.html
+++ b/index.html
@@ -71,8 +71,15 @@
                 color: #000 !important;
             }
 
+            /* HIDE SPECIFIC SECTIONS AS REQUESTED */
+            #summary,
+            #gemini-analysis,
+            #roadmap {
+                display: none !important;
+            }
+
             /* Hide interactive and irrelevant blocks */
-            #gemini-analysis, #architecture, #floating-buttons, #audio-player-bar {
+            #architecture, #floating-buttons, #audio-player-bar {
                 display: none !important;
             }
 
